Outsource UI styles

--- a/src/ui/components/Message.module.css
+++ b/src/ui/components/Message.module.css
@@ -2,46 +2,12 @@
   @apply p-2 mx-4 rounded-sm;
 }
 
-.Content, .Link, .Code, .WidgetDescription {
+.Content, .Link {
   @apply text-xs;
 }
 
 .Link {
   @apply inline-block mt-1 underline hover:no-underline;
-}
-
-.CodeContainer {
-  @apply p-4;
-}
-
-.DocsContainer {
-  @apply py-4;
-}
-
-.WidgetLink {
-  @apply text-xs;
-  color: var(--figma-color-bg-brand);
-}
-
-.WidgetLink:hover {
-  color: var(--figma-color-bg-brand-hover);
-}
-
-.WidgetName {
-  @apply font-mono font-medium text-sm;
-  color: var(--figma-color-text-tertiary);
-}
-
-.WidgetDescription {
-  color: var(--figma-color-text-tertiary);
-  @apply pt-1;
-}
-
-.CodeBlock {
-  @apply pt-4 text-xs whitespace-pre-wrap;
-
-  /* To override the default color prism adds */
-  background-color: var(--figma-color-bg) !important;
 }
 
 /* Specific colors for errors and success messages */
